# rust-api-template

./: .env  .env.example  Cargo.toml  compose.yml  makefile  readme.md
.github/workflows/: main.yml
.sqlx/: query-171f07975cf260d23d1077aa57c85bbb8741b6f136122653fefac674eadb3dca.json  query-363330547681f7a414d117a32de25a2647fa0f4b97eba772dc23008798456cd0.json  query-36c85b6447bd16fcca68752f1f7f9d05e9a32dd32a4fd30804327ce73905201c.json  query-4643a886e01f7111e63d0136dc63882c7186de86d3a30ca3d00b280c5cdc0ed2.json  query-88f23b59e72f3d364e0c83c1046b05c8fa7243caa6e1a6aba4a9228531156474.json  query-a65937cc250d94bc40f49bf1d8dbd426f9c4c233aa1e8ff416cd78998265126f.json  query-ee9d817948640116064cc0a50cb7319ad7880b0d26cdd68cc5ac47099c662ce9.json  query-f300df08e9fcf624ec5ec8dbb7ea8c55a50f6266650833f70806c8df30da5733.json
migrations/: 20241217210833_create_users_table.sql  20241217211018_create_posts_table.sql
src/: lib.rs  main.rs  open_api.rs  posts_old.rs  users.rs
src/posts/: db.rs  handlers.rs  mod.rs
src/users/: db.rs  handlers.rs
tests/: health_check_test.rs  posts_test.rs  test_utils.rs
tests/utils/: test_utils.rs
