[package]
name = "axum-rest-api-template"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
chrono = "0.4.39"
dotenvy = "0.15.7"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-native-tls", "postgres"] }
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utoipa = "5.3.0"
utoipa-swagger-ui = {version = "8.1.0", features = ["axum"]}
